--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,23 +1,10 @@
 ---
 import Layout from "../layouts/Layout.astro";
 
-// import { drizzle } from "drizzle-orm/d1";
-// import { homes } from "../../schemas/drizzle";
-
-let officeData = await fetch("https://theofficeapi.dev/api/character/62");
-let dataJson = await officeData.json();
-
-// const { DB } = Astro.locals.runtime.env;
-
-// const driz = drizzle(DB);
-// console.log(DB.prepare('Select * from Homes').all());
-
-// const homesData = await driz.select().from(homes).all();
-
-// console.log(homesData);
-// export const prerender = false;
+const response = await fetch('https://d1-http.mceryak.workers.dev/homes');
+const homes = await response.json();
 ---
 
 <Layout>
-  {JSON.stringify(dataJson)}
+  {JSON.stringify(homes)}
 </Layout>
