--- a/src/components/nav/Navbar.astro
+++ b/src/components/nav/Navbar.astro
@@ -6,35 +6,70 @@ import { Icon } from "astro-icon/components";
 import MenuItemLink from "./MenuItemLink.astro";
 import MenuItemDropdown from "./MenuItemDropdown.astro";
 
-// const menuItems:  = [
-
-// ]
+const menuItems = [
+  {
+    label: "Shop",
+    submenu: [
+      { label: "Manufactured Homes", path: "/homes" },
+      { label: "Modular Homes", path: "/homes" },
+      { label: "Tiny Homes", path: "/homes" },
+      { label: "Carports", path: "/carports" },
+    ],
+  },
+  { label: "Services", path: "/services" },
+  { label: "Finance", path: "/finance" },
+  { label: "FAQ", path: "/faq" },
+  { label: "About", path: "/about" },
+  // { label: "Contact", path: "/contact" },
+];
 ---
+
+<a href="tel:3176916790" aria-label="Call us at 317-691-6790">
+  <div
+    class="flex items-center gap-2 justify-center p-1 bg-sky-950 border-b-1 border-b-white/20 text-zinc-200"
+  >
+    <Icon name="mdi:phone" />
+    317-691-6790
+  </div>
+</a>
 
 <a
   href="#main-content"
-  class="hidden md:block z-30 opacity-0 focus:opacity-100 p-2 bg-sky-800 text-white text-2xl rounded-2xl absolute top-4 left-4 transition-opacity ease-in-out no-underline pointer-events-none focus:pointer-events-auto outline-white outline-2"
+  class="hidden lg:block z-30 opacity-0 focus:opacity-100 p-2 bg-sky-800 text-white text-2xl rounded-2xl absolute top-4 left-4 transition-opacity ease-in-out no-underline pointer-events-none focus:pointer-events-auto outline-white outline-2"
   >Skip to main content</a
 >
 
-<button
-  class="block md:hidden p-1 ml-auto cursor-pointer text-2xl"
-  id="open-sidebar-button"
-  onclick="openSidebar()"
-  aria-label="open menu"
-  aria-expanded="false"
-  aria-controls="navbar"
+<ul
+  class="lg:hidden gap-8 w-full bg-sky-900 border-b-2 border-b-white/20 text-zinc-200"
 >
-  <Icon name="mdi:hamburger-menu" />
-</button>
+  <div class="flex justify-between items-center px-4">
+    <li>
+      <a class="lg:hidden cursor-pointer" href="/" aria-label="Home Page">
+        <img src="/images/logo1.png" width="200" alt="Home" />
+      </a>
+    </li>
+    <li>
+      <button
+        class="block lg:hidden p-1 ml-auto cursor-pointer text-2xl"
+        id="open-sidebar-button"
+        onclick="openSidebar()"
+        aria-label="open menu"
+        aria-expanded="false"
+        aria-controls="navbar"
+      >
+        <Icon name="mdi:hamburger-menu" class="text-3xl" />
+      </button>
+    </li>
+  </div>
+</ul>
 <nav
   id="navbar"
   inert
   aria-label="Main Menu"
-  class="z-20 fixed md:sticky top-0 -right-full transition-all ease-in-out h-full md:h-auto w-[min(15em,100%)] md:w-full border-l-2 border-l-black/50 bg-gradient-to-b from-sky-950 to-sky-800 text-zinc-200 font-semibold"
+  class="z-20 fixed lg:sticky top-0 -right-full transition-all ease-in-out h-full lg:h-auto w-[min(15em,100%)] lg:w-full border-l-2 border-l-black/50 bg-gradient-to-b from-sky-950 to-sky-800 text-zinc-200 font-semibold"
 >
-  <ul class="flex flex-col md:flex-row justify-between list-none md:px-8">
-    <li class="ml-auto md:hidden">
+  <ul class="flex flex-col lg:flex-row justify-between list-none lg:px-8">
+    <li class="ml-auto lg:hidden">
       <button
         id="close-sidebar-button"
         class="p-1 cursor-pointer text-2xl"
@@ -45,17 +80,35 @@ import MenuItemDropdown from "./MenuItemDropdown.astro";
       </button>
     </li>
 
-    <a class="hidden md:block cursor-pointer" href="/">
-      <img src="/images/logo1.png" width="200" alt="Home" />
+    <a class="hidden lg:flex lg:items-center cursor-pointer" href="/">
+      <img src="/images/logo1.png" width="200" alt="Home" class="" />
     </a>
-    <span class="md:hidden">
+    <span class="lg:hidden">
       <MenuItemLink path="/" label="Home" class="mr-auto" aria-current="page" />
     </span>
-    <div class="flex flex-col md:flex-row">
-      <MenuItemLink path="/services" label="Services" class="ml-auto" />
-      <MenuItemDropdown client:load label="Shop" />
-      <!-- <MenuItemDropdown client:load label="Other Dropdown" /> -->
-      <MenuItemLink path="/about" label="About" />
+    <div class="flex flex-col lg:flex-row">
+      {
+        menuItems.map((item) =>
+          item.path ? (
+            <MenuItemLink path={item.path} label={item.label} />
+          ) : (
+            <MenuItemDropdown label={item.label} submenuItems={item.submenu} />
+          )
+        )
+      }
+    </div>
+
+    <div class="hidden lg:flex items-center gap-3 whitespace-nowrap">
+      <a href="tel:3176916790" class="p-2 border-2 rounded-3xl">
+        <div class="flex items-center gap-2">
+          <!-- <Icon name="mdi:phone" /> -->
+          Contact
+        </div>
+      </a>
+      <button class="cursor-pointer">
+        <!-- <Icon name="mdi:account" class="" aria-label="Profile"/> -->
+        Sign In
+      </button>
     </div>
   </ul>
 </nav>
@@ -82,12 +135,12 @@ import MenuItemDropdown from "./MenuItemDropdown.astro";
     console.log("media change");
     const isMobile = e.matches;
     if (isMobile) {
-      if (!navbar.classList.contains('right-0')) {
+      if (!navbar.classList.contains("right-0")) {
         navbar.setAttribute("inert", "");
       }
     } else {
-      if (!overlay.classList.contains('hidden')) {
-        overlay.classList.add('hidden');
+      if (!overlay.classList.contains("hidden")) {
+        overlay.classList.add("hidden");
       }
       navbar.removeAttribute("inert");
     }
@@ -97,12 +150,14 @@ import MenuItemDropdown from "./MenuItemDropdown.astro";
     navbar.classList.add("right-0");
     navbar.removeAttribute("inert");
     overlay.classList.remove("hidden");
+    openSidebarButton.classList.add("hidden");
     openSidebarButton.setAttribute("aria-expanded", true);
   }
   function closeSidebar() {
     navbar.classList.remove("right-0");
     navbar.setAttribute("inert", "");
     overlay.classList.add("hidden");
+    openSidebarButton.classList.remove("hidden");
     openSidebarButton.setAttribute("aria-expanded", false);
   }
 
@@ -111,7 +166,7 @@ import MenuItemDropdown from "./MenuItemDropdown.astro";
       // Read the message from the data attribute.
       const { label } = this.dataset;
       const button = this.querySelector("button");
-      
+
       const listId = (label) => `dropdown-list-${label}`;
       const iconId = (label) => `dropdown-icon-${label}`;
       const btnId = (label) => `dropdown-btn-${label}`;
@@ -128,13 +183,13 @@ import MenuItemDropdown from "./MenuItemDropdown.astro";
         const allIcons = document.querySelectorAll("[id^='dropdown-icon-']");
         const allBtns = document.querySelectorAll("[id^='dropdown-btn-']");
         allLists.forEach((d) => d.classList.add("hidden"));
-        allIcons.forEach(i => i.classList.remove('-rotate-180'));
-        allBtns.forEach(b => b.classList.remove('bg-white/5'));
+        allIcons.forEach((i) => i.classList.remove("-rotate-180"));
+        allBtns.forEach((b) => b.classList.remove("bg-white/5"));
 
         if (isHidden) {
           listElem?.classList.remove("hidden");
           iconElem.classList.add("-rotate-180");
-          btnElem.classList.add('bg-white/5');
+          btnElem.classList.add("bg-white/5");
           // iconElem.classList.add('rotate-180');
         }
       });
