--- a/src/components/nav/MenuItemDropdown.astro
+++ b/src/components/nav/MenuItemDropdown.astro
@@ -2,15 +2,16 @@
 import { Icon } from "astro-icon/components";
 import MenuItemLink from "./MenuItemLink.astro";
 
-const { label } = Astro.props;
+const { label, submenuItems } = Astro.props;
 ---
 
 <li class="relative">
+  <!-- defined in navbar script -->
   <dropdown-button-container data-label={label}>
-    <!-- defined in navbar script -->
     <button
-      class="cursor-pointer p-4 pr-2 hover:bg-white/10 w-full"
+      class="cursor-pointer p-4 lg:p-6 pr-2 hover:bg-white/10 w-full"
       id=`dropdown-btn-${label}`
+      aria-controls=`dropdown-list-${label}`
     >
       <div class="flex items-center gap-1">
         {label}
@@ -24,17 +25,14 @@ const { label } = Astro.props;
   </dropdown-button-container>
 
   <div id={`dropdown-list-${label}`} class="hidden">
-    <!-- <Icon
-      name="mdi:triangle"
-      class="md:absolute md:top-full md:right-[40%] text-sky-800"
-    /> -->
     <ul
-      class="list-none transition-all md:absolute md:top-full shadow-2xl whitespace-nowrap right-0 rounded-b-lg  md:bg-sky-800"
+      class="list-none transition-all lg:absolute lg:top-full shadow-2xl whitespace-nowrap left-0 rounded-b-lg lg:bg-sky-800"
     >
-      <MenuItemLink label="Manufactured Homes" path="/homes" isDropdown />
-      <MenuItemLink label="Modular Homes" path="/homes"   isDropdown />
-      <MenuItemLink label="Tiny Homes" path="/homes"   isDropdown />
-      <MenuItemLink label="Carports" path="/carports"   isDropdown isLastItem/>
+      {
+        submenuItems.map((item) => (
+          <MenuItemLink label={item.label} path={item.path} isDropdown />
+        ))
+      }
     </ul>
   </div>
 </li>
