--- a/src/components/nav/MenuItemLink.astro
+++ b/src/components/nav/MenuItemLink.astro
@@ -2,15 +2,16 @@
 const { path, label, isDropdown=false, isLastItem=false } = Astro.props;
 
 const highlightClass = isDropdown ? "bg-white/5" : "";
+const paddingClass = isDropdown ? "p-4" : "p-4 lg:p-6";
 const hoverHighlightClass = isDropdown ? 'hover:bg-white/15' : 'hover:bg-white/10';
-const borderClass = isDropdown ? "border-t-2 border-t-white/5 md:border-t-white/50" : "";
-const indentClass = isDropdown ? "pl-4 md:pl-2" : "";
+const borderClass = isDropdown ? "border-b-1 border-b-white/5 lg:border-b-white/20" : "";
+const indentClass = isDropdown ? "pl-4 lg:pl-2" : "";
 ---
 
 <li>
   <a
     href={path}
-    class=`flex no-underline ${indentClass}  p-4  ${borderClass} ${highlightClass} ${hoverHighlightClass}`
+    class=`flex no-underline ${indentClass}  ${paddingClass}  ${borderClass} ${highlightClass} ${hoverHighlightClass}`
     >
     <span class={indentClass}>{label}</span>
     </a
