--- a/src/components/nav/Navbar.astro
+++ b/src/components/nav/Navbar.astro
@@ -99,7 +99,7 @@ const menuItems = [
     </div>
 
     <div class="hidden lg:flex items-center gap-3 whitespace-nowrap">
-      <a href="tel:3176916790" class="p-2 border-2 rounded-3xl">
+      <a href="tel:3176916790" class="p-2 border-2 rounded-3xl hover:bg-white hover:text-sky-800 transition-colors">
         <div class="flex items-center gap-2">
           <!-- <Icon name="mdi:phone" /> -->
           Contact
