--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,13 @@
 ---
 import Layout from "../layouts/Layout.astro";
 
-const response = await fetch('https://d1-http.mceryak.workers.dev/homes');
+const response = await fetch("https://d1-http.mceryak.workers.dev/homes");
 const homes = await response.json();
 ---
 
 <Layout>
+  <img
+    src="https://michaelceryak.com/cdn-cgi/image/width=80,quality=75/https://image-cdn-worker.mceryak.workers.dev/image/r2Image1.png"
+  />
   <!-- {JSON.stringify(homes)} -->
 </Layout>
