--- a/src/components/nav/Navbar.astro
+++ b/src/components/nav/Navbar.astro
@@ -24,12 +24,12 @@ const menuItems = [
 ];
 ---
 
-<a href="tel:3176916790" aria-label="Call us at 317-691-6790">
+<a href="tel:3176916790" aria-label="Call us at 333-333-3333">
   <div
     class="flex items-center gap-2 justify-center p-1 bg-sky-950 border-b-1 border-b-white/20 text-zinc-200"
   >
     <Icon name="mdi:phone" />
-    317-691-6790
+    333-333-3333
   </div>
 </a>
 
@@ -45,7 +45,7 @@ const menuItems = [
   <div class="flex justify-between items-center px-4">
     <li>
       <a class="lg:hidden cursor-pointer" href="/" aria-label="Home Page">
-        <img src="/images/logo1.png" width="200" alt="Home" />
+        <img src="/images/logo4.png" width="200" alt="Home" class="p-2" />
       </a>
     </li>
     <li>
@@ -81,7 +81,7 @@ const menuItems = [
     </li>
 
     <a class="hidden lg:flex lg:items-center cursor-pointer" href="/">
-      <img src="/images/logo1.png" width="200" alt="Home" class="" />
+      <img src="/images/logo4.png" width="170" alt="Home" class="p-2" />
     </a>
     <span class="lg:hidden">
       <MenuItemLink path="/" label="Home" class="mr-auto" aria-current="page" />
@@ -99,7 +99,7 @@ const menuItems = [
     </div>
 
     <div class="hidden lg:flex items-center gap-3 whitespace-nowrap">
-      <a href="tel:3176916790" class="p-2 border-2 rounded-3xl hover:bg-white hover:text-sky-800 transition-colors">
+      <a href="tel:3176916790" class="p-2 border-2 rounded-3xl hover:bg-white/5  transition-colors">
         <div class="flex items-center gap-2">
           <!-- <Icon name="mdi:phone" /> -->
           Contact
