--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ const homes = await response.json();
 
 <Layout>
   <img
-    src="https://michaelceryak.com/cdn-cgi/image/width=80,quality=75/https://image-cdn-worker.mceryak.workers.dev/image/r2Image1.png"
+    src="https://michaelceryak.com/cdn-cgi/image/width=80,quality=75/https://cdn.michaelceryak.com/image/r2Image1.png"
   />
   <!-- {JSON.stringify(homes)} -->
 </Layout>
