--- a/src/components/nav/Navbar.astro
+++ b/src/components/nav/Navbar.astro
@@ -1,4 +1,5 @@
 ---
+export const prerender = false;
 import "../../styles/global.css";
 
 import Logo from "../../assets/images/logo.webp";
@@ -9,9 +10,9 @@ import MenuItemDropdown from "./MenuItemDropdown.astro";
 // import GSignInButton from "../auth/GSignInButton";
 // import GSignOutButton from "../auth/SignOutButtonClient";
 // import SignOutButton from "../SignOutButton.astro";
-import SignInButton from "../auth/SignInButton.astro";
-import SignOutButton from "../auth/SignOutButton.astro";
-import ProfileButton from "./ProfileButton.astro";
+// import SignInButton from "../auth/SignInButton.astro";
+// import SignOutButton from "../auth/SignOutButton.astro";
+// import ProfileButton from "./ProfileButton.astro";
 import ProfileButtonIsland from "./ProfileButtonIsland.astro";
 
 const menuItems = [
