try server island fix

--- a/src/components/nav/Navbar.astro
+++ b/src/components/nav/Navbar.astro
@@ -1,8 +1,7 @@
 ---
-export const prerender = false;
 import "../../styles/global.css";
 
-import Logo from "../../assets/images/logo.webp";
+// import Logo from "../../assets/images/logo.webp";
 import { Icon } from "astro-icon/components";
 import MenuItemLink from "./MenuItemLink.astro";
 import MenuItemDropdown from "./MenuItemDropdown.astro";
