--- a/src/components/nav/ProfileButtonIsland.astro
+++ b/src/components/nav/ProfileButtonIsland.astro
@@ -1,4 +1,5 @@
 ---
+export const prerender = false;
 import ProfileButton from "./ProfileButton.astro";
 import ProfileIcon from "../icons/ProfileIcon.astro";
 ---
