--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,7 @@
 ---
 import Navbar from "../components/nav/Navbar.astro";
+
+const { noCache=false } = Astro.props;
 ---
 
 <!doctype html>
@@ -9,6 +11,7 @@ import Navbar from "../components/nav/Navbar.astro";
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+    {noCache && <meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate, max-age=0" />}
 		<title>Astro Basics</title>
 	</head>
 	<body>
