--- a/src/pages/sign-in.astro
+++ b/src/pages/sign-in.astro
@@ -1,24 +1,21 @@
 ---
 export const prerender = false;
 
-const { session, user } = Astro.locals;
-
+const { session } = Astro.locals;
 if (session) {
-  return Astro.redirect("/dashboard");
+  return Astro.redirect("/profile");
 }
 
 import GSignInButton from "@/components/auth/SocialSignInButton";
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Sign in">
+<Layout title="Sign in" >
   <div
     class="flex flex-col gap-4 items-center m-auto my-20 p-5 w-150 bg-zinc-100 rounded-3xl"
   >
-    <h1 class="text-2xl font-bold">
-      Sign in to keep track of your favorite homes
-    </h1>
-    <GSignInButton providerId="google" client:load />
-    <GSignInButton providerId="facebook" client:load />
+    <h1 class="text-2xl font-bold">Sign in to bookmark your favorite homes</h1>
+    <GSignInButton providers={["google", "facebook"]} client:load />
+    <!-- <GSignInButton providerId="facebook" client:load /> -->
   </div>
 </Layout>
