--- a/src/modules/nav/ProfileButton.astro
+++ b/src/modules/nav/ProfileButton.astro
@@ -1,6 +1,6 @@
 ---
 export const prerender = false;
-import ProfileIcon from "../icons/ProfileIcon.astro";
+import ProfileIcon from "@/modules/icons/ProfileIcon.astro";
 
 const { session } = Astro.locals;
 const hasSession = !!session;
