--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,8 @@
 ---
-import Navbar from "../components/nav/Navbar.astro";
+import Navigation from "@/components/static/Navigation.astro";
+import Footer from '@/components/Footer.astro';
+// Supports weights 100-900
+import '@fontsource-variable/outfit';
 
 const { noCache=false } = Astro.props;
 ---
@@ -15,10 +18,15 @@ const { noCache=false } = Astro.props;
 		<title>Astro Basics</title>
 	</head>
 	<body>
-    <Navbar />
-    <main id="main-content">
-      <slot />
+    <Navigation />
+    <slot name="hero" />
+    <main id="main-content" class="flex justify-center items-center">
+      
+
+        <slot />
+
     </main>
+    <Footer />
 	</body>
 </html>
 
